[package]
name = "get-cookie"
version = "0.2.0"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
edition = "2021"
description = "Fetch a cookie from a local browser's cookie store"
readme = "README.md"
repository = "https://github.com/haimgel/get-cookie"
license = "GPLv3"
keywords = ["browser", "cookie"]
categories = ["parsing", "os", "api-bindings"]

[dependencies]
dirs = "^4"
rusqlite = "^0"
keyring = "^1"
ring = "^0"
aes = "^0"
cbc = "^0"
thiserror = "^1"
chrono = "^0"
